--- a/admin/index.html
+++ b/admin/index.html
@@ -52,7 +52,7 @@
 <div id="adapter-container">
 
     <table><tr>
-        <td><img src="iobroker.vis-keyboard.png"></td>
+        <td><img src="keyboard.png"></td>
         <td style="padding-top: 20px;padding-left: 10px"><h3 class="translate">iobroker.vis-keyboard Widgets settings</h3></td>
     </tr></table>
 
